# alanc-crapi

./: .envrc  .gitignore  docker-compose-linode.yml  docker-compose-local.yml
.envs/.local/: .apigw  .community  .global  .identity  .mailhog  .mongodb  .postgres  .web  .workshop
deploy/k8s/: Pulumi.sa-noname.yaml  Pulumi.yaml  __main__.py  pyproject.toml
deploy/k8s/base/: pulumi.sh
deploy/k8s/pulumi_components/community/: __main__.py  crapiCommunity.py  crapiCommunity1.py  crapiCommunityConfigmap.py
deploy/k8s/pulumi_components/gateway-service/: __main__.py  gatewayService.py  gatewayService1.py  gatewayServiceConfigmap.py
deploy/k8s/pulumi_components/identity/: Pulumi.yaml  __main__.py  crapiIdentity.py  crapiIdentity1.py  crapiIdentityConfigmap.py
deploy/k8s/pulumi_components/mailhog/: __main__.py  mailhog.py  mailhogConfigmap.py  mailhogWeb.py  mailhogcrapi.py
deploy/k8s/pulumi_components/mongodb/: Pulumi.yaml  __main__.py  mongodb.py  (+3 more)
deploy/k8s/utils/: helpers.py
deploy/pulumi/aws/eks/: Pulumi.saeks.yaml  Pulumi.yaml  README.md  __main__.py  pyproject.toml
deploy/pulumi/aws/eks/common/: base.py  enums.py
deploy/pulumi/aws/eks/config/: settings.py
deploy/pulumi/aws/eks/resources/: bootstrap.py  community.py  databases.py  identity.py  mailhog.py  web.py  workshop.py
deploy/pulumi/aws/eks/utils/: helpers.py
infra/: Pulumi.sa-noname.yaml  Pulumi.yaml  __main__.py
services/gateway-service/: Dockerfile
services/web/: env.d.ts  package-lock.json  package.json  webpack.config.js
services/web/public/: index.html
services/web/src/: config.ts
(+34 files in other folders)
