[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool]
[tool.poetry]
package-mode = false
[tool.poetry.dependencies]
pulumi = ">=3.0.0,<4.0.0"
pulumi-kubernetes = ">=4.0.0,<5.0.0"
python = "^3.8"
ruff = "^0.6.7"
python-decouple = "^3.8"
pulumi-docker-build = "^0.0.6"
pulumi-awsx = "^2.15.0"
